--- a/nszz/1.htm
+++ b/nszz/1.htm
@@ -2,8 +2,8 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»ºÏ¼¯</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€åˆé›†</title>
 <style type="text/css">
 .style1 {
 	margin-left: 40px;
@@ -16,27 +16,27 @@
 
 <p>&nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;</p>
 <p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
-<font size="6" color="#800080">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»ÊÓÆµºÏ¼¯<br></font></p>
-<p>¡¡</p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-1-100.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»1-100½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-101-200.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»101-200½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;</span></p>
+<font size="6" color="#800080">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€è§†é¢‘åˆé›†<br></font></p>
+<p>ã€€</p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-1-100.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€1-100èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-101-200.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€101-200èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;</span></p>
 
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-201-300.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»201-300½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-301-400.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»301-400½Ú</a> &nbsp;&nbsp; </p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-401-500.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»401-500½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-501-530.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»501-530½Ú</a> &nbsp; </p>
-<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-531-550.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»531-550½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-551-600.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»551-600½Ú</a> &nbsp;&nbsp; </p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-601-700.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»601-700½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-701-800.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»701-800½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;</span></p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-801-850.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»801-850½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-851-900.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»851-900½Ú</a> &nbsp;&nbsp; </p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-901-1000.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»901-1000½Ú</a> &nbsp;&nbsp; </p>
-<p>¡¡</p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-201-300.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€201-300èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-301-400.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€301-400èŠ‚</a> &nbsp;&nbsp; </p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-401-500.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€401-500èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-501-530.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€501-530èŠ‚</a> &nbsp; </p>
+<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-531-550.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€531-550èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-551-600.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€551-600èŠ‚</a> &nbsp;&nbsp; </p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-601-700.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€601-700èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-701-800.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€701-800èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;</span></p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-801-850.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€801-850èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-851-900.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€851-900èŠ‚</a> &nbsp;&nbsp; </p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-1-901-1000.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€901-1000èŠ‚</a> &nbsp;&nbsp; </p>
+<p>ã€€</p>
 <p>
   <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  </span>&nbsp;<a target="_blank" a href="2.htm">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶şÊÓÆµºÏ¼¯</a>&nbsp;&nbsp;&nbsp;
+  </span>&nbsp;<a target="_blank" a href="2.htm">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒè§†é¢‘åˆé›†</a>&nbsp;&nbsp;&nbsp;
 	
 	<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  </span>&nbsp;<a target="_blank" a href="3.htm">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈıÊÓÆµºÏ¼¯</a>&nbsp;&nbsp;&nbsp;
+  </span>&nbsp;<a target="_blank" a href="3.htm">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰è§†é¢‘åˆé›†</a>&nbsp;&nbsp;&nbsp;
 	
 	
 	
-	</p><p>¡¡</p><p>¡¡</p>
+	</p><p>ã€€</p><p>ã€€</p>
 	
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
@@ -51,7 +51,19 @@ var _hmt = _hmt || [];
 })();
 </script><br><br>
 
-<p>¡¡</p>
+<p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 
 
 </body>
