--- a/nszz/2.htm
+++ b/nszz/2.htm
@@ -2,8 +2,8 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶şÊÓÆµºÏ¼¯</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒè§†é¢‘åˆé›†</title>
 <style type="text/css">
 .style1 {
 	margin-left: 40px;
@@ -16,37 +16,37 @@
 
 <p>&nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;</p>
 <p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
-<font size="6" color="#800080">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶şÊÓÆµºÏ¼¯<br></font></p>
+<font size="6" color="#800080">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒè§†é¢‘åˆé›†<br></font></p>
 
-<p>¡¡</p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-1-100.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş1-100½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-101-200.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş101-200½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;</span></p>
+<p>ã€€</p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-1-100.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ1-100èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-101-200.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ101-200èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;</span></p>
 
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-201-300.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş201-300½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-301-400.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş301-400½Ú</a> &nbsp;&nbsp; </p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-401-500.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş401-500½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-501-550.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş501-550½Ú</a> &nbsp; </p>
-<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-551-600.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş551-600½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-601-650.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş601-650½Ú</a> &nbsp;&nbsp; </p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-651-700.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş651-700½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-701-750.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş701-750½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;</span></p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-751-800.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş751-800½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-801-850.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş801-850½Ú</a> &nbsp;&nbsp; </p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-201-300.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ201-300èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-301-400.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ301-400èŠ‚</a> &nbsp;&nbsp; </p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-401-500.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ401-500èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-501-550.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ501-550èŠ‚</a> &nbsp; </p>
+<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-551-600.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ551-600èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-601-650.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ601-650èŠ‚</a> &nbsp;&nbsp; </p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-651-700.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ651-700èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-701-750.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ701-750èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;</span></p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-751-800.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ751-800èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-801-850.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ801-850èŠ‚</a> &nbsp;&nbsp; </p>
 <p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-851-900.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş850-900½Ú</a>&nbsp;&nbsp;&nbsp;
+  </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-851-900.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ850-900èŠ‚</a>&nbsp;&nbsp;&nbsp;
 	
-  <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-901-950.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş901-950½Ú</a>&nbsp;&nbsp;&nbsp;
+  <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-901-950.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ901-950èŠ‚</a>&nbsp;&nbsp;&nbsp;
 	
 	
 	
   </p>
 	
-	<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-951-1000.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶ş950-1000½Ú</a> &nbsp;&nbsp; </p>
-	<p>¡¡</p>
+	<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-2-951-1000.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒ950-1000èŠ‚</a> &nbsp;&nbsp; </p>
+	<p>ã€€</p>
 	<p>
 	<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  </span>&nbsp;<a target="_blank" a href="1.htm">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»ÊÓÆµºÏ¼¯</a>&nbsp;&nbsp;&nbsp;
+  </span>&nbsp;<a target="_blank" a href="1.htm">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€è§†é¢‘åˆé›†</a>&nbsp;&nbsp;&nbsp;
 	
 	<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  </span>&nbsp;<a target="_blank" a href="3.htm">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈıÊÓÆµºÏ¼¯</a>&nbsp;&nbsp;&nbsp;
+  </span>&nbsp;<a target="_blank" a href="3.htm">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰è§†é¢‘åˆé›†</a>&nbsp;&nbsp;&nbsp;
 	
 	
 	
-	</p><p>¡¡</p><p>¡¡</p>
+	</p><p>ã€€</p><p>ã€€</p>
 	
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
@@ -61,7 +61,19 @@ var _hmt = _hmt || [];
 })();
 </script><br><br>
 
-<p>¡¡</p>
+<p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 
 </body>
 
