--- a/nszz/201412.htm
+++ b/nszz/201412.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -94,10 +94,30 @@
 耶稣根据旧约编新约，葛亦民根据新约编神经。这些骗子的伎俩到现在仍然有人信。我都无语了。人民们请问你们的脑子什么时候才能清醒啊？<br />
 耶稣那个两千年前就被认定是骗子的骗子，到了两千年后却被认为是救世主。现在又出现一个葛亦民，是不是等葛亦民死了，然后他的忽悠教徒再编点故事那么葛亦民又成了第二个救世主了？</p>
 <p>&nbsp;</p>
+
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+<br><br> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></p>
 
 </body>
 
