--- a/nszz/20157.htm
+++ b/nszz/20157.htm
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>2015年7月互联网评论-神教网 </title>
+<title>2015年7月互联网评论-神教网 </title>
 </head>
 
 <body>
@@ -165,7 +165,28 @@ lxdasb1991: 因为他根本搞不起，傻比才信他。<br />
 之后又让小号来抬高自己，这就是姓葛的高明之处，先贬低自己，又抬高自己，确实高明，但是精神领袖不需要这种玩意，因为这个时代已经不需要这种东西了，每年的什么十佳XXX，就是精神领袖了，一个比一个惨，若你要惨的话，去试试开铁奥，我好用Z撞死你。<br />
 </p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+<br><br> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></p>
 
 </body>
 
