--- a/nszz/20166.htm
+++ b/nszz/20166.htm
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>2016年6月互联网评论-神教网 </title>
+<title>2016年6月互联网评论-神教网 </title>
 </head>
 
 <body>
@@ -185,7 +185,28 @@
 凡是少的，就连他所有的，也要夺过来。凡是多的，还要给他，叫他多多益善。——马太效应。<br>
 》》》葛花：共产主义首先由基督教神学家提出。共产主义作为一种学说，首先是由基督教的神学家所创立，“按劳分配、按需分配（按需取酬）”这些概念也首先是由这些神学家提出的。</p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+<br><br> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></p>
 
 </body>
 
