--- a/nszz/202067.htm
+++ b/nszz/202067.htm
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>2020年6-7月网友评论-神教网 </title>
+<title>2020年6-7月网友评论-神教网 </title>
 </head>
 
 <body>
@@ -109,12 +109,33 @@
 》方竹之地: 葛神是个神经病。<br>
 》》2007chunlu55: 不知【伊甸园】还永生？永糊涂，永闭塞、永不知！<br>
 》耶梅: 神经十82永生：1、神旨。2、科技，众人皆神。<br>
-》》张星：我等了整个晚上咋没人问葛圣人最值得问的问题？有违老蒋辛苦找到咱班最传奇同学的初心吧。<br>@葛亦民 你好，请问你创立的那个教派是咋回事？如果不方便回答就忽略好了。</p>
+》》张星：我等了整个晚上咋没人问葛圣人最值得问的问题？有违老蒋辛苦找到咱班最传奇同学的初心吧。<br>@葛亦民 你好，请问你创立的那个教派是咋回事？如果不方便回答就忽略好了。</p>
 <p>&nbsp;</p>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+<br><br> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></p>
 
 </body>
 
