--- a/nszz/20169.htm
+++ b/nszz/20169.htm
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>2016年9月互联网评论-神教网 </title>
+<title>2016年9月互联网评论-神教网 </title>
 </head>
 
 <body>
@@ -480,7 +480,28 @@
 　　葛亦民先森也不怎么高明——对比一下洪秀全一党，红果果的抄袭嘛！不要讲什么和他不一样这类的话，有什么地方什么和他不一样？没他有运气罢了，葛先森和他的差别在什么地方咱真真是没看出来！<br>
 　　老罗要是把你的思维揭露的血淋淋，千万别发飙哟……<br>
 》葛花：葛亦民异梦是真实的，老洪显然是假的，不是来自神，所以失败。</p>
-<p>&nbsp;</p>
+<p><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+<br><br> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></p>
 
 </body>
 
