--- a/nszz/3.htm
+++ b/nszz/3.htm
@@ -2,8 +2,8 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title> Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈıÊÓÆµºÏ¼¯</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰è§†é¢‘åˆé›†</title>
 <style type="text/css">
 .style1 {
 	margin-left: 40px;
@@ -16,38 +16,42 @@
 
 <p>&nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;</p>
 <p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
-<font size="6" color="#800080"> Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈıÊÓÆµºÏ¼¯<br></font></p>
+<font size="6" color="#800080"> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰è§†é¢‘åˆé›†<br></font></p>
 
-<p>¡¡</p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-1-50.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı1-50½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-51-100.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı51-100½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp; </span></p>
+<p>ã€€</p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-1-50.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰1-50èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-51-100.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰51-100èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp; </span></p>
 
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-101-150.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı101-150½Ú</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-151-200.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı151-200½Ú</a> &nbsp;&nbsp; </p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-101-150.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰101-150èŠ‚</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-151-200.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰151-200èŠ‚</a> &nbsp;&nbsp; </p>
 <p>
-	<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-201-250.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı201-250½Ú</a> &nbsp;&nbsp;
-	<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-251-300.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı251-300½Ú</a> &nbsp;&nbsp; </p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-301-350.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı301-350½Ú</a> &nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-351-400.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı351-400½Ú</a> &nbsp;&nbsp; </p>
+	<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-201-250.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰201-250èŠ‚</a> &nbsp;&nbsp;
+	<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-251-300.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰251-300èŠ‚</a> &nbsp;&nbsp; </p>
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-301-350.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰301-350èŠ‚</a> &nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-351-400.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰351-400èŠ‚</a> &nbsp;&nbsp; </p>
 
-	<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-401-430.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı401-430½Ú</a> &nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-431-460.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı431-460½Ú</a> &nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;
+	<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-401-430.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰401-430èŠ‚</a> &nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-431-460.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰431-460èŠ‚</a> &nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;
 	
 	
 	
   </p>
 	
-	<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-461-490.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı461-490½Ú</a> &nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-491-510.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı491-510½Ú</a> &nbsp;
+	<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-461-490.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰461-490èŠ‚</a> &nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-491-510.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰491-510èŠ‚</a> &nbsp;
 	
 	
 	
-  </p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-511-530.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı511-530½Ú</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-531-550.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı531-550½Ú</a> &nbsp;
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-551-560.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı551-560½Ú</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-561-590.mp4">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Èı£©¡¢¾íÈı561-590½Ú</a> &nbsp;
+  </p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-511-530.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰511-530èŠ‚</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-531-550.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰531-550èŠ‚</a> &nbsp;
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-551-560.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰551-560èŠ‚</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-561-590.mp4">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰561-590èŠ‚</a> &nbsp;
 
 
 	</p>
-
-	<p> <span lang="en-us">&nbsp;&nbsp;&nbsp;</span></p>
-	<p><span lang="en-us">&nbsp; &nbsp; &nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="1.htm">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨Ò»£©¡¢¾íÒ»ÊÓÆµºÏ¼¯</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="2.htm">Éñ¾­µÚ¶şÊ®ÆßÕÂÍøÓÑÆÀÂÛÆª£¨¶ş£©¡¢¾í¶şÊÓÆµºÏ¼¯</a> &nbsp;&nbsp; </p>
-	<p>¡¡</p><p>¡¡</p>
+ &nbsp; &nbsp; &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-591-610.mp4"> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰591-610èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-611-620.mp4"> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰611-620èŠ‚</a> &nbsp;
+ <p> <span lang="en-us">&nbsp; &nbsp;&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-621-640.mp4"> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰621-640èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-641-680.mp4"> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰641-680èŠ‚</a> </span></p>
+ <p> &nbsp; &nbsp;&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-681-710.mp4"> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰681-710èŠ‚</a>ã€€&nbsp; &nbsp; &nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-711-735.mp4"> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰711-735èŠ‚</a></p>
+<p>  &nbsp; &nbsp;&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/sj/sj27-3-736-780.mp4"> ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸‰ï¼‰ã€å·ä¸‰736-780èŠ‚</a>ã€€&nbsp; &nbsp; &nbsp; &nbsp;ã€€</p>
+<p> ã€€</p>
+<p> ã€€</p>
+<p><span lang="en-us">&nbsp; &nbsp; &nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="1.htm">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆä¸€ï¼‰ã€å·ä¸€è§†é¢‘åˆé›†</a> &nbsp;&nbsp; <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="2.htm">ç¥ç»ç¬¬äºŒåä¸ƒç« ç½‘å‹è¯„è®ºç¯‡ï¼ˆäºŒï¼‰ã€å·äºŒè§†é¢‘åˆé›†</a> &nbsp;&nbsp; </p>
+	<p>ã€€</p><p>ã€€</p>
 	
-&nbsp;&nbsp;&nbsp;<p>¡¡</p>
+&nbsp;&nbsp;&nbsp;<p>ã€€</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 <script>
@@ -60,9 +64,21 @@ var _hmt = _hmt || [];
 })();
 </script><br><br>
 
+</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </p>
 
-<p>¡¡</p><p>¡¡</p>
+<p>ã€€</p><p>ã€€</p>
 
 </body>
 
