--- a/scsl/wx.html
+++ b/scsl/wx.html
@@ -1,30 +1,30 @@
 <html>
 <head>
-<title> Î¢ĞÅ¹«ÖÚºÅ¡¢QQÈº</title>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<title> å¾®ä¿¡å…¬ä¼—å·ã€QQç¾¤</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 
 <body bgcolor="#FFFFFF">
-<p>¡¡</p>
+<p>ã€€</p>
 <p>
-<b style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><span style="font-size: large; letter-spacing: normal"><b>Î¢ĞÅ¹«ÖÚºÅ</b></span></p>
-<p>¡¡</p>
+<b style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><span style="font-size: large; letter-spacing: normal"><b>å¾®ä¿¡å…¬ä¼—å·</b></span></p>
+<p>ã€€</p>
 
- Î¢ĞÅ¹«ÖÚºÅ£ºgodjiao£¨¸ğÒàÃñ£©
+ å¾®ä¿¡å…¬ä¼—å·ï¼šgodjiaoï¼ˆè‘›äº¦æ°‘ï¼‰
 <IMG SRC="../pic/wx.jpg">
 
-<p>¡¡</p>
+<p>ã€€</p>
 
 
-Î¢ĞÅ¹«ÖÚºÅ£ºgeyimin1969£¨Éñ½Ì£©
+å¾®ä¿¡å…¬ä¼—å·ï¼šgeyimin1969ï¼ˆç¥æ•™ï¼‰
 
 <IMG SRC="../pic/wxg.jpg">
 
 
 
 
-<p>¡¡</p>
-<p>QQÈº75081524£º<IMG SRC="../pic/qqqun.jpg">
+<p>ã€€</p>
+<p>QQç¾¤75081524ï¼š<IMG SRC="../pic/qqqun.jpg">
 </p>
 
 
@@ -37,10 +37,22 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>¡¡</p>
+</script>ã€€</p>
 
 
-<p>¡¡</p>
+<p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 
 
 </body>
