--- a/scsl/zc.html
+++ b/scsl/zc.html
@@ -1,33 +1,33 @@
 <html>
 <head>
-<title>ÂÑ³²°©3CÆÚ£¬ÁÜ°Í½á°©×ªÒÆ</title>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<title>åµå·¢ç™Œ3CæœŸï¼Œæ·‹å·´ç»“ç™Œè½¬ç§»</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
-<p>ÂÑ³²°©3CÆÚ£¬ÁÜ°Í½á°©×ªÒÆ</p>
+<p>åµå·¢ç™Œ3CæœŸï¼Œæ·‹å·´ç»“ç™Œè½¬ç§»</p>
 <p>
 <span style="color: rgb(26, 26, 26); font-family: Merriweather, Georgia, serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-ÎÒ½Ğºú´º·¼£¬½­ËÕÕò½­ÈË£¬ÂÑ³²°©3CÆÚ£¬ËÍ¼ìÁÜ°Í½á×óÅèÇ»3/9Ã¶°©×ªÒÆ£¬ÂÑ³²°©Õ³ÒºĞÔÄÒÏÙ°©ºÏ²¢Í¸Ã÷Ï¸°û°©3CÆÚ£¬ºÜÑÏÖØ£¬»¹ÓĞ¸ßÑªÑ¹ÌÇÄò²¡£¬2018Äê6ÔÂ×¡Ôº£¬½µÑªÌÇÔÚÄÚ·ÖÃÚ¿Æ£¬·ÑÓÃ4Ç§¶à£¬ÊÖÊõ¸¾¿ÆÈ«ÇĞ³ı2Íò4£¬»¯ÁÆÒÑ8¸öÁÆ³Ì16Íò£¬¸´·¢¾ÍÒªÖØ¸´ÊÖÊõ¡¢»¯ÁÆ¡£ÏÖÔÚ³ï¿îÓÃÓÚ¶¨ÆÚCTµÈ¼ì²é¡¢»¯Ñé£¬¿¹°©Ò©¡¢°ĞÏòÒ©£¬²¢ÎªÒÔºó¸´·¢µÄ»¯ÁÆ¡¢ÊÖÊõ³ï×Ê£¬Ï£ÍûºÃĞÄÈË°ï°ïÎÒ£¬ÎÒÏë¶à»î¼¸Äê¡£</span></p>
-<p>¡¡<img border="0" src="hcf.jpg" width="540" height="733" ></p>
+æˆ‘å«èƒ¡æ˜¥èŠ³ï¼Œæ±Ÿè‹é•‡æ±Ÿäººï¼Œåµå·¢ç™Œ3CæœŸï¼Œé€æ£€æ·‹å·´ç»“å·¦ç›†è…”3/9æšç™Œè½¬ç§»ï¼Œåµå·¢ç™Œç²˜æ¶²æ€§å›Šè…ºç™Œåˆå¹¶é€æ˜ç»†èƒç™Œ3CæœŸï¼Œå¾ˆä¸¥é‡ï¼Œè¿˜æœ‰é«˜è¡€å‹ç³–å°¿ç—…ï¼Œ2018å¹´6æœˆä½é™¢ï¼Œé™è¡€ç³–åœ¨å†…åˆ†æ³Œç§‘ï¼Œè´¹ç”¨4åƒå¤šï¼Œæ‰‹æœ¯å¦‡ç§‘å…¨åˆ‡é™¤2ä¸‡4ï¼ŒåŒ–ç–—å·²8ä¸ªç–—ç¨‹16ä¸‡ï¼Œå¤å‘å°±è¦é‡å¤æ‰‹æœ¯ã€åŒ–ç–—ã€‚ç°åœ¨ç­¹æ¬¾ç”¨äºå®šæœŸCTç­‰æ£€æŸ¥ã€åŒ–éªŒï¼ŒæŠ—ç™Œè¯ã€é¶å‘è¯ï¼Œå¹¶ä¸ºä»¥åå¤å‘çš„åŒ–ç–—ã€æ‰‹æœ¯ç­¹èµ„ï¼Œå¸Œæœ›å¥½å¿ƒäººå¸®å¸®æˆ‘ï¼Œæˆ‘æƒ³å¤šæ´»å‡ å¹´ã€‚</span></p>
+<p>ã€€<img border="0" src="hcf.jpg" width="540" height="733" ></p>
 <p style="margin: 0px 0px 28px; color: rgb(26, 26, 26); font-family: Merriweather, Georgia, serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </p>
 <p style="color: rgb(26, 26, 26); font-family: Merriweather, Georgia, serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; margin-left:0px; margin-right:0px; margin-top:0px; margin-bottom:28px">
 <font size="6">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Ö§¸¶±¦ 50914333@qq.com ºú´º·¼</font></p><img border="0" src="hzfb.jpg" width="540" height="733" >
+æ”¯ä»˜å® 50914333@qq.com èƒ¡æ˜¥èŠ³</font></p><img border="0" src="hzfb.jpg" width="540" height="733" >
 <p style="color: rgb(26, 26, 26); font-family: Merriweather, Georgia, serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; margin-left:0px; margin-right:0px; margin-top:0px; margin-bottom:28px">
-¡¡</p>
+ã€€</p>
 <p style="color: rgb(26, 26, 26); font-family: Merriweather, Georgia, serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; margin-left:0px; margin-right:0px; margin-top:0px; margin-bottom:28px">
-<font size="6">½¨ĞĞ¿¨ºÅ 6217001300002808159&nbsp; ºú´º·¼ ¿ª»§ĞĞ£º½­ËÕÕò½­½¨ÉèÒøĞĞÓªÒµ²¿</font></p>
+<font size="6">å»ºè¡Œå¡å· 6217001300002808159&nbsp; èƒ¡æ˜¥èŠ³ å¼€æˆ·è¡Œï¼šæ±Ÿè‹é•‡æ±Ÿå»ºè®¾é“¶è¡Œè¥ä¸šéƒ¨</font></p>
 <p style="color: rgb(26, 26, 26); font-family: Merriweather, Georgia, serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; margin-left:0px; margin-right:0px; margin-top:0px; margin-bottom:28px">
-¡¡</p>
-<p><img border="0" src="hlcy.jpg" ><img border="0" src="j20190403.jpg" ><img border="0" src="ry1.jpg" >¡¡<img border="0" src="ss1.jpg" ><img border="0" src="cy1.jpg" ><img border="0" src="zdbg.jpg" ><img border="0" src="zdbgzy.jpg" ><img border="0" src="hm.jpg" >¡¡</p>
-<p>¡¡ </p>
+ã€€</p>
+<p><img border="0" src="hlcy.jpg" ><img border="0" src="j20190403.jpg" ><img border="0" src="ry1.jpg" >ã€€<img border="0" src="ss1.jpg" ><img border="0" src="cy1.jpg" ><img border="0" src="zdbg.jpg" ><img border="0" src="zdbgzy.jpg" ><img border="0" src="hm.jpg" >ã€€</p>
+<p>ã€€ </p>
 <p></p>
 <p></p>
 <p style="margin: 0px 0px 28px; color: rgb(26, 26, 26); font-family: Merriweather, Georgia, serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
-Ô­ÇáËÉ³ï³ï¿îÁ´½Ó£º</p>
+åŸè½»æ¾ç­¹ç­¹æ¬¾é“¾æ¥ï¼š</p>
 <p style="margin: 0px 0px 28px; color: rgb(26, 26, 26); font-family: Merriweather, Georgia, serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 https://m2.qschou.com/project/love/love_v7.html?projuuid=92121f45-63cc-4d22-8fc7-de96a574f303</p>
 <br class="Apple-interchange-newline"><script>
@@ -38,7 +38,19 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
+</script><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-¡¡
+</p>
+ã€€
 </body>
 </html>
