--- a/xwa/mk7.htm
+++ b/xwa/mk7.htm
@@ -1,20 +1,21 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Éñ¸æËßÏµÍ³MK7--¸ðÒàÃñÍ½ÓÐ10Íò¶àÈË</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç¥žå‘Šè¯‰ç³»ç»ŸMK7--è‘›äº¦æ°‘å¾’æœ‰10ä¸‡å¤šäºº</title>
 </head>
 
 <body>
 
-<p><span style="COLOR: #000000; FONT-SIZE: 12px" id="post1">Éñ¸æËßÏµÍ³MK7--¸ðÒàÃñÍ½ÓÐ10Íò¶àÈË<br>
+<p><span style="COLOR: #000000; FONT-SIZE: 12px" id="post1">ç¥žå‘Šè¯‰ç³»ç»ŸMK7--è‘›äº¦æ°‘å¾’æœ‰10ä¸‡å¤šäºº<br>
 <br>
 <br>
-¡·ÕâÐ¡×ÓÐÅÍ½ÆÆÍò¿Ï¶¨µÄ<br>
+ã€‹è¿™å°å­ä¿¡å¾’ç ´ä¸‡è‚¯å®šçš„<br>
 <br>
-¡·Éñ¸æËßÎÒµÄ ÆÆÍòÊÇÉÙËµ¸ö0<br>
+ã€‹ç¥žå‘Šè¯‰æˆ‘çš„ ç ´ä¸‡æ˜¯å°‘è¯´ä¸ª0<br>
 <br>
-¡¡</span></p>
+ã€€</span></p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
